Gerer l'acces aux pages necessitant une identification utilisateur [closes #6]
