# api/internal/router/router.go
@@ -3,6 +3,7 @@ package router
 import (
 	"net/http"
 	"github.com/go-chi/chi/v5"
+	Middleware "gowebgame/internal/middleware"
 	httpSwagger "github.com/swaggo/http-swagger"
 	AuthSignup "gowebgame/features/auth/signup"
 	AuthSignin "gowebgame/features/auth/signin"
@@ -12,9 +13,9 @@ func InitRoute() http.Handler {
 	r := chi.NewRouter()
 
 	r.Get("/", WelcomeHandler)
+	r.With(Middleware.JWTMiddleware).Get("/private", PrivateHandler)
 
 	r.Post("/auth/signup", AuthSignup.SignupHandler())
-
 	r.Post("/auth/signin", AuthSignin.SigninHandler())
 
 
@@ -35,4 +36,18 @@ func WelcomeHandler(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte(`{"message": "Bienvenue sur l'API Gowebgame"}`))
+}
+
+// @Summary Page privee
+// @Description Affiche un message indiquant que l'on est sur une page privee
+// @Tags Private
+// @Accept json
+// @Security BearerAuth
+// @Produce json
+// @Success 200 {object} map[string]string
+// @Router /private [get]
+func PrivateHandler(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write([]byte(`{"message": "Bienvenue sur une page privée"}`))
 }
